--- a/resources/private/scss/parts/_section.scss
+++ b/resources/private/scss/parts/_section.scss
@@ -1,14 +1,12 @@
 section {
     width: auto;
     height: $section_height;
-    background: $white;
+    background: #2f4f4f;
     margin: 0;
-    padding: 5px;
-    text-align: left;
-    border-bottom: 1px solid #EEE;
+    text-align: center;
     ol {
         display: grid;
-        grid-template-columns: 200px 200px auto auto auto auto;
+        grid-template-columns: 250px 250px 150px 150px 100px auto;
         grid-template-ares: "headerFName headerLName headerEmail headerContactNumber headerApptType headerApptDate";
         grid-gap: 0;
         margin: 0;
@@ -17,10 +15,11 @@ section {
             vertical-align: middle;
             line-height: 50px;
             font-size: 110%;
+            color: $white;
             list-style: none;
             white-space: normal;
             list-style-position: inside;
-            border: 1px solid #EEE;
+            border: 1px solid black;
             .headerFName {
                 grid-area: headerFName;
             }
