--- a/resources/private/scss/parts/_calc.scss
+++ b/resources/private/scss/parts/_calc.scss
@@ -7,3 +7,5 @@ $dbl_padding    : 10px;
 $large_margin   : 30px;
 $side_width     : auto;
 $article_width  : 550px;
+$search_height  : 20px;
+$font_size      : 16px;
