--- a/resources/private/scss/parts/_section.scss
+++ b/resources/private/scss/parts/_section.scss
@@ -1,7 +1,7 @@
 section {
     width: auto;
     height: $section_height;
-    background: #2f4f4f;
+    background: $section_bg;
     margin: 0;
     text-align: center;
     ol {
