--- a/resources/private/scss/parts/_page.scss
+++ b/resources/private/scss/parts/_page.scss
@@ -5,11 +5,12 @@ body {
     display: grid;
     grid-gap: 0;
     grid-template-columns: $article_width $article_width $side_width;
-    grid-template-rows: $bar_height $section_height calc(100vh - (#{$bar_height} * 2 + #{$section_height})) $bar_height;
-    grid-template-areas: "header header header"
+    grid-template-rows: $bar_height $section_height calc(100vh - (#{$bar_height} * 2 + (#{$section_height} * 2))) #{$section_height} $bar_height;
+    grid-template-areas: "header  header  header"
                          "section section aside"
                          "article article aside"
-                         "footer footer footer";
+                         "search  search  aside"
+                         "footer  footer  footer";
     /*
     grid-template-rows: $bar_height $section_height calc(100vh - (#{$bar_height} * 2)) $bar_height;
     grid-template-areas: "header header header"
@@ -25,6 +26,9 @@ body {
     article {
         grid-area: article;
         overflow: auto;
+    }
+    div {
+        grid-area: search;
     }
     aside {
         grid-area: aside;
