--- a/resources/private/scss/parts/_aside.scss
+++ b/resources/private/scss/parts/_aside.scss
@@ -32,7 +32,7 @@ aside {
             box-shadow: inset 1px 1px 2px #BABECC, inset -1px -1px 2px #FFF;
         }
     }
-    button {
+    .submitEdit {
         color: #61677C;
         font-weight: bold;
         width: 50%;
