--- a/resources/private/scss/parts/_search.scss
+++ b/resources/private/scss/parts/_search.scss
@@ -1,27 +1,13 @@
 div {
     width: auto;
     background: $section_bg;
-    padding-left: 5px;
-    padding-top: 10px;
     overflow: hidden;
-    float: right;
     .search {
+        width: 100%;
+        height: 100%;
         padding: 6px;
-        margin-top: 8px;
-        font-size: $font_size;
-        border: none;
-        button {
-            float: right;
-            padding: 6px 10px;
-            margin-top: 8px;
-            margin-right: 16px;
-            background: #ddd;
-            font-size: 17px;
-            border: none;
-            cursor: pointer;
-            &:hover {
-                background: #ccc;
-            }
-        }
+        margin: 1px;
+        font-size: 21px;
+        border: 1px solid black;
     }
 }
