--- a/resources/private/scss/parts/_aside.scss
+++ b/resources/private/scss/parts/_aside.scss
@@ -24,7 +24,7 @@ aside {
     }
     label {
         display: block;
-        margin-bottom: $font_size*1.5;
+        margin-bottom: 8px;
         width: 100%;
     }
     input, select {
@@ -90,6 +90,7 @@ aside {
         margin: 0;
         padding: 0;
         width: 100%;
+        margin-top: 0 !important;
         margin-bottom: 24px;
         .buttonsNav {
             display: table;
