--- a/resources/private/scss/parts/_header.scss
+++ b/resources/private/scss/parts/_header.scss
@@ -9,6 +9,7 @@ header {
     font-size: 120%;
     h1 {
         display: inline-block;
+        margin-left: 4px;
     }
     div {
         margin: 0;
