working on the authentication

--- a/resources/private/scss/parts/_calc.scss
+++ b/resources/private/scss/parts/_calc.scss
@@ -9,3 +9,9 @@ $side_width     : auto;
 $article_width  : 550px;
 $search_height  : 20px;
 $font_size      : 16px;
+$ruler          : 16px;
+
+$color_red      : #AE1100;
+$color_bg       : #EBECF0;
+$color_shadow   : #BABECC;
+$color_white    : #FFFFFF;
