--- a/resources/private/scss/parts/_logincontainer.scss
+++ b/resources/private/scss/parts/_logincontainer.scss
@@ -1,8 +1,3 @@
-$ruler: 16px;
-$color-red: #AE1100;
-$color-bg: #EBECF0;
-$color-shadow: #BABECC;
-$color-white: #FFF;
 #logincontainer {
     margin: 0;
     padding: 0;
@@ -15,27 +10,32 @@ $color-white: #FFF;
         margin-right: auto;
         display: inline-block;
         width: 400px;
-        p, input, select, textarea, button {
+        input, select, textarea {
             font-family: 'Montserrat', sans-serif;
             letter-spacing: -0.2px;
             font-size: $ruler;
         }
-        div, p {
-            color: $color-shadow;
-            text-shadow: 1px 1px 1px $color-white;
+        #loginbutton, #registerbutton, #fbbutton, #googlebutton {
+            font-family: 'Montserrat', sans-serif;
+            letter-spacing: -0.2px;
+            font-size: $ruler;
+        }
+        div {
+            color: $color_shadow;
+            text-shadow: 1px 1px 1px $color_white;
         }
         .segment {
             padding: $ruler*2 0;
             text-align: center;
         }
-        button, input {
+        #loginbutton, #registerbutton, #fbbutton, #googlebutton, input {
             border: 0;
             outline: 0;
             font-size: $ruler;
             border-radius: $ruler*20;
             padding: $ruler;
-            background-color:$color-bg;
-            text-shadow: 1px 1px 0 $color-white;
+            background-color:$color_bg;
+            text-shadow: 1px 1px 0 $color_white;
         }
         label {
             display: block;
@@ -44,30 +44,22 @@ $color-white: #FFF;
         }
         input {
             margin-right: $ruler/2;
-            box-shadow:  inset 2px 2px 5px $color-shadow, inset -5px -5px 10px $color-white;
+            box-shadow:  inset 2px 2px 5px $color_shadow, inset -5px -5px 10px $color_white;
             width: 100%;
             box-sizing: border-box;
             transition: all 0.2s ease-in-out;
             appearance: none;
             -webkit-appearance: none;
-
             &:focus {
-                box-shadow:  inset 1px 1px 2px $color-shadow, inset -1px -1px 2px $color-white;
+                box-shadow:  inset 1px 1px 2px $color_shadow, inset -1px -1px 2px $color_white;
             }
         }
-        button {
+        #loginbutton, #registerbutton, #fbbutton, #googlebutton {
             color:#61677C;
             font-weight: bold;
-            box-shadow: -5px -5px 20px $color-white,  5px 5px 20px $color-shadow;
             transition: all 0.2s ease-in-out;
             cursor: pointer;
             font-weight: 600;
-            &:hover {
-                box-shadow: -2px -2px 5px $color-white, 2px 2px 5px $color-shadow;
-            }
-            &:active {
-                box-shadow: inset 1px 1px 2px $color-shadow, inset -1px -1px 2px $color-white;
-            }
             .icon {
                 margin-right: $ruler/2;
             }
@@ -88,16 +80,7 @@ $color-white: #FFF;
             &.red {
                 display: block;
                 width: 100%;
-                color:$color-red;
-            }
-        }
-        .input-group {
-            display: flex;
-            align-items: center;
-            justify-content: flex-start;
-            label {
-                margin: 0;
-                flex: 1;
+                color: $color_red;
             }
         }
     }
