--- a/resources/private/scss/system.scss
+++ b/resources/private/scss/system.scss
@@ -12,4 +12,5 @@
 @import 'parts/searchparent';
 @import 'parts/formcontainer';
 @import 'parts/footer';
-
+@import 'parts/alert';
+@import 'parts/popup'
