--- a/resources/private/scss/parts/_headerlist.scss
+++ b/resources/private/scss/parts/_headerlist.scss
@@ -7,7 +7,7 @@
     ol {
         display: grid;
         grid-template-columns: 250px 250px 150px 150px 100px auto;
-        grid-template-ares: "headerFName headerLName headerEmail headerContactNumber headerApptType headerApptDate";
+        grid-template-areas: "headerFName headerLName headerEmail headerContactNumber headerApptType headerApptDate";
         grid-gap: 0;
         margin: 0;
         padding: 0;
